      unreachable gateways.
    * User managament: Added fields for editing host/service notification commands
    * Added new active check configuration for check_smtp
    * Improved visualization of ruleset lists/dictionaries
    * Encoding special chars in RegExp valuespec (e.g. logwatch patterns)
    * Added check_interval and retry_interval rules for host checks
    * FIX: Removed double collect_hosts() call in activate changes hook
    * FIX: Fixed double hook execution when using localized multisite
    * FIX: User list shows names of contactgroups when no alias given
    * FIX: Reflecting alternative mode of check_http (check ssl certificate
    age) in WATO rule editor
    * FIX: Fixed monitoring of slave hosts in master site in case of special
      distributed wato configurations
    * FIX: Remove also user settings and event console rule on factory reset
    * FIX: complex list widgets (ListOf) failed back to old value when
           complaining

    BI:
    * Great speed up of rule compilation in large environments

    Multisite:
    * Added css class="dashboard_<name>" to the dashboard div for easier
    customization of the dashboard style of a special dashboard
    * Sidebar: Sorting aggregation groups in BI snapin now
    * Sidebar: Sorting sites in master control snapin case insensitive
    * FIX: fixed localization of general permissions
    * FIX: show multisite warning messages even after page reload
    * FIX: fix bug in Age ValueSpec: days had been ignored
    * FIX: fixed bug showing only sidebar after re-login in multisite
    * FIX: fixed logwatch loosing the master_url parameter in distributed setups
    * FIX: Fixed doubled var "site" in view editor (site and siteopt filter)
    * FIX: Don't crash on requests without User-Agent HTTP header

    Livecheck:
    * FIX: Compile livecheck also if diet libc is missing

1.2.0p2:
    Core:
    * simulation_mode: legacy_checks, custom_checks and active_checks