@@ -1,0 +1,13 @@
+Title: Better check API validation
+Component: core
+State: open
+Date: 2012-09-14 10:18:45
+Targetversion: future
+Class: cleanup
+
+The returned inventory data is validated if it is a list. But not further. It would be good
+to also validate if the items in the list are tuples of 2 or 3 items while the first item
+is a single value of none or a string and the second is a string or also none.
+
+Same for the data returned by the check data.
+
